First working version of embedded Cassandra after restart issues was found. The implementation might not be stable enough, yet.